<resources>
    <string name="app_name">RecoLecture</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="confirm_upload">Are you sure you want to upload this file?</string>

    <string-array name="class_array">
        <item>First Dummy</item>
        <item>Second Dummy</item>
        <item>Third Dummy</item>
    </string-array>

    <string name="lecture_placeholder">chapter1.1_lecture.mp3</string>
    <string name="lecture_placeholder2">chapter1.2_lecture.mp3</string>
    <string name="lecture_placeholder3">chapter1.3_lecture.mp3</string>
    <string name="lecture_placeholder4">chapter1.4_lecture.mp3</string>
    <string name="lecture_placeholder5">chapter1.5_lecture.mp3</string>

    <string name="preference_change_username">current_username</string>
    <string name="preference_change_password">current_password</string>
    <string name="preference_dark_theme">use_dark_theme</string>
    <string name="preference_dummy_classes">use_dummy_classes</string>
    <string name="preference_create_lecture">create_lecture</string>
    <string name="preference_sign_out">sign_out</string>


    <!--STRINGS FOR STUDENT_ACTIVITY_MAIN-->
    <string name="student_home_tile">Home</string>
    <string name="student_home_description">Select the class you would like to\ndownload or view lectures from.</string>

    <!-- STRINGS FOR ACTIVITY_TEACHER_MAIN_SCREEN -->
    <string name="teacher_home_title">Home</string>
    <string name="teacher_home_description">Manage your classes, upload files, \nor record a new lecture.</string>
    <string name="teacher_home_myClassesTitle">My Classes</string>
    <string name="teacher_home_myClassesDescription">Manage your classes, students,\nand files.</string>
    <string name="teacher_home_uploadTitle">Upload</string>
    <string name="teacher_home_uploadDescription">Upload a lecture you have\npreviously recorded.</string>
    <string name="teacher_home_recordTitle">Record</string>
    <string name="teacher_home_recordDescription">Record a new lecture.</string>

    <string name="no_classes_title">No Classes!</string>
    <string name="no_classes_description">Click here to create a class</string>

    <string name="teacher_class_overviewTitle">Class Overview</string>
    <string name="teacher_class_overviewDescription">Select the class you would like to manage.</string>

    <string name="teacher_manageStudentsTitle">Students</string>
    <string name="teacher_manageStudentsDescription">Manage the students in your class.</string>
    <string name="teacher_manageFilesTitle">Files</string>
    <string name="teacher_manageFilesDescription">Manage the uploaded files in your class.</string>

    <!-- STRINGS FOR ACTIVITY_UPLOAD -->
    <string name="upload_confirm_upload_title">Confirm Upload</string>
    <string name="upload_confirm_upload_description">desc</string>

    <string name="upload_select_students_title">Select Students</string>
    <string name="upload_select_students_description">To send to the entire class, choose select all. To share with specific students, check only their names.</string>

    <string name="upload_result">Success!</string>

    <string name="upload_pick_a_file_title">Pick a File</string>
    <string name="upload_pick_a_file_description">Choose the files you would like to upload</string>

    <string name="upload_class_title">Select Your Classes</string>
    <string name="upload_class_description">Check the classes you would like to upload\nyour lecture to.</string>

    <string name="button_Upload">Upload to these classes</string>

    <!-- LECTURE HARDCODES -->
    <string name="lecture_sample_name_1">Intro to the present tense</string>
    <string name="lecture_sample_name_2">Chapter 1 vocabulary part 1</string>
    <string name="lecture_sample_name_3">Chapter 1 vocabulary part 2</string>
    <string name="lecture_sample_name_4">Irregular present tense</string>
    <string name="lecture_sample_name_5">Stem changing verbs</string>
    <string name="sampleClass_0">Spanish I</string>
    <string name="sampleClass_1">Spanish II</string>
    <string name="sampleClass_2">Spanish III</string>

    <!-- STRINGS FOR SLIDE_CLASS -->
    <string name="title_activity_teacher_create_class">TeacherCreateClass</string>
    <string name="title_activity_student_class_page">StudentClassPage</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_registration_screen">RegistrationScreen</string>

    <!-- VERSION NUMBER -->
    <string name="version">v0.1 alpha</string>
    <string name="title_activity_contact">ContactActivity</string>

    <string name="title_activity_bsod">BSOD</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>