<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/teacher_main_activity_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activity.TeacherMainActivity"
    tools:showIn="@layout/activity_teacher_main_activity">
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView android:id="@+id/teacherHomeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/header_margin_top"
                android:text="@string/teacher_home_title"
                android:fontFamily="sans-serif-thin"
                android:textSize="28sp" />

            <TextView android:id="@+id/teacherHomeDescription"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:text="@string/teacher_home_description"
                android:layout_marginBottom="16dp"
                android:layout_below="@+id/teacherHomeTitle"
                />



            <!-- TODO: Fix Cardviews-->
            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/buttonClasses"
                android:layout_width="match_parent"
                android:layout_below="@+id/teacherHomeDescription"
                android:layout_height="120dp"
                app:cardCornerRadius="4dp"
                android:layout_marginBottom="16dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp">

                <RelativeLayout android:id="@+id/cardButton1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="@dimen/class_card_padding"
                    android:paddingBottom="@dimen/class_card_padding"
                    android:paddingStart="@dimen/class_card_padding_side"
                    android:paddingEnd="@dimen/class_card_padding_side"
                    android:background="@android:color/transparent">

                    <!-- Begin card layout -->
                    <TextView
                        android:id="@+id/cardButton1Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/teacher_home_myClassesTitle"
                        android:textSize="30sp"
                        android:textColor="?cardTitleTextPrimary"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="4dp"
                        android:layout_marginBottom="4dp"/>

                    <TextView
                        android:layout_marginStart="6dp"
                        android:layout_below="@id/cardButton1Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text="@string/teacher_home_myClassesDescription"
                        />

                    <ImageView android:id="@+id/overflow"
                        android:layout_centerVertical="true"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_alignParentEnd="true"
                        android:src="@drawable/ic_next"
                        android:tint="@color/colorAccent"
                        android:clickable="false"/>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/buttonUpload"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                app:cardCornerRadius="4dp"
                android:layout_marginBottom="16dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layout_below="@+id/buttonClasses"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp">

                <RelativeLayout android:id="@+id/cardButton2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="@dimen/class_card_padding"
                    android:paddingBottom="@dimen/class_card_padding"
                    android:paddingStart="@dimen/class_card_padding_side"
                    android:paddingEnd="@dimen/class_card_padding_side"
                    android:background="@android:color/transparent">

                    <!-- Begin card layout -->
                    <TextView
                        android:id="@+id/cardButton2Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/teacher_home_uploadTitle"
                        android:textSize="30sp"
                        android:textColor="?cardTitleTextPrimary"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="4dp"
                        android:layout_marginBottom="4dp"/>

                    <TextView
                        android:layout_marginStart="6dp"
                        android:layout_below="@id/cardButton2Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text="@string/teacher_home_uploadDescription"
                        />

                    <ImageView android:id="@+id/overflow2"
                        android:layout_centerVertical="true"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_alignParentEnd="true"
                        android:src="@drawable/ic_next"
                        android:tint="@color/colorAccent"
                        android:clickable="false"/>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/buttonRecord"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                app:cardCornerRadius="4dp"
                android:layout_marginBottom="16dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layout_below="@id/buttonUpload"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp">

                <RelativeLayout android:id="@+id/cardButton3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="@dimen/class_card_padding"
                    android:paddingBottom="@dimen/class_card_padding"
                    android:paddingStart="@dimen/class_card_padding_side"
                    android:paddingEnd="@dimen/class_card_padding_side"
                    android:background="@android:color/transparent">

                    <!-- Begin card layout -->
                    <TextView
                        android:id="@+id/cardButton3Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/teacher_home_recordTitle"
                        android:textSize="30sp"
                        android:textColor="?cardTitleTextPrimary"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="4dp"
                        android:layout_marginBottom="4dp"/>

                    <TextView
                        android:layout_marginStart="6dp"
                        android:layout_below="@id/cardButton3Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text="@string/teacher_home_recordDescription"
                        />

                    <ImageView android:id="@+id/overflow3"
                        android:layout_centerVertical="true"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_alignParentEnd="true"
                        android:src="@drawable/ic_next"
                        android:tint="@color/colorAccent"
                        android:clickable="false"/>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

        </RelativeLayout>
        
    </ScrollView>

</RelativeLayout>